# ra-tls-clients

./: .gitignore  README.md  THIRD-PARTY-LICENSES
.github/workflows/: build-mobile-ffi.yaml
dotnet/: RaTlsClient.cs  RaTlsClient.csproj  TestHello.cs
go/: go.mod  integration_test.go  main.go  test_challenge.go
go/cmd/test_challenge/: main.go
go/ratls/: challenge_ratls.go  challenge_std.go  client.go  client_tdx_rtmr_test.go  dependencies.go  dependencies_test.go  egress_identity_ratls.go  egress_identity_std.go  gpu_binding_test.go  image_profile_test.go  report_data_test.go
go/vault/: client.go  shamir.go  shamir_test.go
python/: ratls_client.py  test_hello.py
rust/: Cargo.toml
rust/mobile/: Cargo.toml
rust/mobile/.github/workflows/: build-mobile-ffi.yaml
rust/mobile/include/: ratls_mobile.h
rust/mobile/scripts/: build-android.sh  build-ios.sh
rust/mobile/src/: lib.rs
rust/src/: main.rs  ratls_client.rs
rust/vault/: Cargo.toml
rust/vault/src/: client.rs  lib.rs  shamir.rs
tests/certificates/: README.md
tests/integration/: test_dotnet.bat  test_go.bat  test_python.bat  test_rust.bat  test_typescript.bat
typescript/: package-lock.json  ratls_client.ts  test_hello.ts
