# Copyright (c) Privasys. All rights reserved.
# Licensed under the GNU Affero General Public License v3.0. See LICENSE file for details.

[package]
name = "ratls-client"
version = "0.1.0"
edition = "2021"
description = "RA-TLS client for enclave-os-mini"

[[bin]]
name = "test_hello"
path = "src/main.rs"

[dependencies]
rustls = "0.23"
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
x509-parser = "0.16"
hex = "0.4"
