# Copyright (c) Privasys. All rights reserved.
# Licensed under the GNU Affero General Public License v3.0. See LICENSE file for details.

[package]
name = "ratls-mobile"
version = "0.1.0"
edition = "2021"
description = "C FFI wrapper around ratls-client for iOS and Android native modules."

[lib]
name = "ratls_mobile"
crate-type = ["staticlib", "cdylib"]

[dependencies]
ratls-client = { path = ".." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = "symbols"
