# Copyright (c) Privasys. All rights reserved.
# Licensed under the GNU Affero General Public License v3.0. See LICENSE file for details.

[package]
name = "vault-client"
version = "0.1.0"
edition = "2021"
description = "Vault client with Shamir Secret Sharing for enclave-os-mini"

[lib]
name = "vault_client"
path = "src/lib.rs"

[dependencies]
ratls-client = { path = ".." }
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
